Not allowing to compute on two different tabs.

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -44,7 +44,7 @@
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <script src="scripts/socket.io.js"></script>
-    <script id="povocopscript" appName="ts" src="scripts/script.js"></script>
+    <script id="povocopscript" appName="pi" src="scripts/script.js"></script>
     <!-- endbuild -->
 
     <!-- Built with love using Web Starter Kit -->
