Computation bar, adaptive scheduling

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -43,8 +43,9 @@
     </div>
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
-    <script src="scripts/socket.io.js"></script>
-    <script id="povocopscript" appName="pi" src="scripts/script.js"></script>
+    <!--<script src="scripts/socket.io.js"></script>-->
+    <!--<script id="povocopscript" appName="pi" src="scripts/script.js"></script>-->
+    <script id="povocopscript" appName="pi" src="scripts/PovocopScript.js"></script>
     <!-- endbuild -->
 
     <!-- Built with love using Web Starter Kit -->
